--- a/index.html
+++ b/index.html
@@ -8,6 +8,18 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment-timezone/0.5.37/moment-timezone-with-data-1970-2030.min.js"></script>
     <link href="src/styles.css" rel="stylesheet" type="text/css" />
     <title>World Clock</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
+      crossorigin="anonymous"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Castoro+Titling&family=Poltawski+Nowy:ital,wght@0,700;1,700&family=Raleway&family=Roboto:wght@400;900&family=Ysabeau:wght@100&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <script src="src/javascript.js"></script>
