--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.4/moment.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment-timezone/0.5.37/moment-timezone-with-data-1970-2030.min.js"></script>
-    <link href="src/styles.css" rel="stylesheet" type="text/css" />
     <title>World Clock</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
@@ -20,8 +19,13 @@
       href="https://fonts.googleapis.com/css2?family=Castoro+Titling&family=Poltawski+Nowy:ital,wght@0,700;1,700&family=Raleway&family=Roboto:wght@400;900&family=Ysabeau:wght@100&display=swap"
       rel="stylesheet"
     />
+    <link href="src/styles.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
+    <div class="container">
+      <h1>World Clock</h1>
+      <div></div>
+    </div>
     <script src="src/javascript.js"></script>
   </body>
 </html>
