--- a/index.html
+++ b/index.html
@@ -26,6 +26,12 @@
       <h1>World Clock</h1>
       <div></div>
     </div>
+    <div class="credit">
+      <a href="https://github.com/dearari/world-clock" target="_blank"
+        >Open Source Code</a
+      >
+      by Sarah
+    </div>
     <script src="src/javascript.js"></script>
   </body>
 </html>
