--- a/index.html
+++ b/index.html
@@ -24,7 +24,27 @@
   <body>
     <div class="container">
       <h1>World Clock</h1>
-      <div></div>
+      <select>
+        <option value="">Choose a city...</option>
+        <option value="">Seoul 🇰🇷</option>
+        <option value="">Brisbane 🇦🇺</option>
+        <option value="">Paris 🇫🇷</option>
+      </select>
+      <div class="city">
+        <h2>New York</h2>
+        <div class="date">May 23rd, 2023</div>
+        <div class="time">3:17 PM</div>
+      </div>
+      <div class="city">
+        <h2>Sydney</h2>
+        <div class="date">May 23rd, 2023</div>
+        <div class="time">3:17 PM</div>
+      </div>
+      <div class="city">
+        <h2>London</h2>
+        <div class="date">May 23rd, 2023</div>
+        <div class="time">3:17 PM</div>
+      </div>
     </div>
     <div class="credit">
       <a href="https://github.com/dearari/world-clock" target="_blank"
