--- a/index.html
+++ b/index.html
@@ -31,19 +31,25 @@
         <option value="">Paris 🇫🇷</option>
       </select>
       <div class="city">
-        <h2>New York</h2>
-        <div class="date">May 23rd, 2023</div>
-        <div class="time">3:17 PM</div>
+        <div>
+          <h2>New York</h2>
+          <div class="date">May 23rd, 2023</div>
+        </div>
+        <div class="time">3:17 <small>PM</small></div>
       </div>
       <div class="city">
-        <h2>Sydney</h2>
-        <div class="date">May 23rd, 2023</div>
-        <div class="time">3:17 PM</div>
+        <div>
+          <h2>London</h2>
+          <div class="date">May 23rd, 2023</div>
+        </div>
+        <div class="time">3:17 <small>PM</small></div>
       </div>
       <div class="city">
-        <h2>London</h2>
-        <div class="date">May 23rd, 2023</div>
-        <div class="time">3:17 PM</div>
+        <div>
+          <h2>Tokyo</h2>
+          <div class="date">May 23rd, 2023</div>
+        </div>
+        <div class="time">3:17 <small>PM</small></div>
       </div>
     </div>
     <div class="credit">
