--- a/index.html
+++ b/index.html
@@ -30,26 +30,26 @@
         <option value="">Brisbane 🇦🇺</option>
         <option value="">Paris 🇫🇷</option>
       </select>
-      <div class="city">
+      <div class="city" id="los-angeles">
         <div>
-          <h2>New York</h2>
-          <div class="date">May 23rd, 2023</div>
+          <h2>Los Angeles</h2>
+          <div class="date"></div>
         </div>
-        <div class="time">3:17 <small>PM</small></div>
+        <div class="time"></div>
       </div>
-      <div class="city">
+      <div class="city" id="london">
         <div>
           <h2>London</h2>
-          <div class="date">May 23rd, 2023</div>
+          <div class="date"></div>
         </div>
-        <div class="time">3:17 <small>PM</small></div>
+        <div class="time"></div>
       </div>
-      <div class="city">
+      <div class="city" id="tokyo">
         <div>
           <h2>Tokyo</h2>
-          <div class="date">May 23rd, 2023</div>
+          <div class="date"></div>
         </div>
-        <div class="time">3:17 <small>PM</small></div>
+        <div class="time"></div>
       </div>
     </div>
     <div class="credit">
