Added current location selection

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
         <option value="Asia/Seoul">Seoul 🇰🇷</option>
         <option value="Australia/Brisbane">Brisbane 🇦🇺</option>
         <option value="Europe/Paris">Paris 🇫🇷</option>
+        <option value="current">My Current Location</option>
       </select>
       <div id="cities">
         <div class="city" id="los-angeles">
