--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   </head>
   <body>
     <div class="container">
-      <h1>World Clock</h1>
+      <h1><a href="/">World Clock</a></h1>
       <select id="city">
         <option value="">Choose a city...</option>
         <option value="Asia/Seoul">Seoul 🇰🇷</option>
