Removed city flags

--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
       <h1><a href="/">World Clock</a></h1>
       <select id="city">
         <option value="">Choose a city...</option>
-        <option value="Asia/Seoul">Seoul 🇰🇷</option>
-        <option value="Australia/Brisbane">Brisbane 🇦🇺</option>
-        <option value="Europe/Paris">Paris 🇫🇷</option>
-        <option value="current">My Current Location</option>
+        <option value="Asia/Seoul">Seoul</option>
+        <option value="Australia/Brisbane">Brisbane</option>
+        <option value="Europe/Paris">Paris</option>
+        <option value="current">Current Location</option>
       </select>
       <div id="cities">
         <div class="city" id="los-angeles">
